Fixed skills spacing
Also added jQuery for fadeIn

--- a/style.css
+++ b/style.css
@@ -194,15 +194,7 @@ section {
 
 .skills {
   font-family: "Roboto Mono", monospace;
-  /* display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)); */
-  display: flex;
-  align-items: center;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  padding-bottom: 50px;
   padding-top: 50px;
-  gap: 100px;
 }
 .skills .title {
   position: relative;
@@ -224,23 +216,35 @@ section {
 }
 .skills-content {
     width: 100%;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 .skills .skills-content .left {
-  width: 70%;
+  width: 60%;
   margin: 0;
 }
 
 .skills .skills-content .right {
-    width: 30%;
+    width: 35%;
     text-align: justify;
-    margin: 0;
+    margin-left: 1%;
+    padding-left: 4%;
 }
 
 .skills-list {
   display: flex;
   justify-content: space-evenly;
   width: 30%;
-    text-align: justify;
+  font-size: 25px;
+  font-weight: 400;
+}
+
+.skills-list li {
+    line-height:30px;
+    padding: 0.5em 2.5em;
+    list-style-type: none; 
 }
 
 .skills p {
@@ -508,6 +512,8 @@ section {
   }
   .about .about-content .column {
     width: 50vw;
+    font-size: 18px;
+    padding: 2%;
   }
   .about .about-content .left img {
     display: flex;
@@ -516,6 +522,7 @@ section {
     position: relative;
     width: 200px;
     height: 200px;
+    padding: 2%;
   }
   .about .about-content .right {
     flex: 100%;
@@ -523,6 +530,26 @@ section {
   .contact-form {
     margin: 5px;
     }
+.skills .skills-content {
+    width: 100%;
+    position: relative;
+    display: inline-block; 
+    }
+.skills-content {
+    left: 10%;
+    
+}
+.skills .left p{
+    width: 100%;
+    font-size: 18px;
+    padding-bottom: 5%;
+}
+.skills-list {
+    width: 50vw;
+    padding: 0;
+    font-size: smaller;
+    padding-top: 5%;
+}
 }
 
 
